# MGSPICO

./: LICENSE  README.md
MGS-PICO-XXX/docs/: partslist_MGS-PICO-03B.xlsx  partslist_MGS-PICO-03C.xlsx
MGS-PICO-XXX/docs/MGS-PICO-03C/: partslist_MGS-PICO-03C.xlsx
MGS-PICO-XXX/docs/MGS-PICO-04A/: partslist_MGS-PICO-04A.xlsx
RasPiPico/players/: README.md  build.cmd  players.z80  playersk.z80  playersn.z80
RasPiPico/playersk/: README.md  build.cmd  playersk.z80
RasPiPico/rp2040/: CMakeLists.txt  README.md
RasPiPico/rp2040/mgspico/: CMakeLists.txt  CReadFileStream.cpp  CReadFileStream.h  CUTimeCount.cpp  CUTimeCount.h  MgsFiles.cpp  MgsFiles.h  MgspicoSettings.cpp  MgspicoSettings.h  def_gpio.h  for_debug.h  global.cpp  global.h  if_player.h  mgspico.cpp  sdfat.cpp  sdfat.h  stdafx.h  t_mgspico.cpp  t_mgspico.h  t_mmmspi.cpp  t_mmmspi.h  t_rp2040.h  t_si5351.cpp  t_si5351.h  timerobj.cpp  timerobj.h
RasPiPico/rp2040/mgspico/HopStepZ/: CHopStepZ.cpp  CHopStepZ.h  CMsxDummyMain.cpp  CMsxDummyMain.h  CMsxIoSystem.cpp  CMsxIoSystem.h  CMsxMemSlotSystem.cpp  CMsxMemSlotSystem.h  CMsxMusic.cpp  CMsxMusic.h  CMsxVoidMemory.cpp  CMsxVoidMemory.h  CPhysicalSlotDevice.cpp  CPhysicalSlotDevice.h  CPhysicalSlotDeviceKIN5.cpp  CPhysicalSlotDeviceKIN5.h  CPhysicalSlotDeviceMGS.cpp  CPhysicalSlotDeviceMGS.h  CRam64k.cpp  CRam64k.h  CScc.cpp  CScc.h  CZ80MsxDos.cpp  CZ80MsxDos.h  CZ80Regs.h  IPhysicalSlotDevice.h  IStreamPlayer.h  msxdef.h  stdafx.h
RasPiPico/rp2040/mgspico/ff/: diskio.h  ff.h  ffconf.h  mmc_pico_spi.c
RasPiPico/rp2040/mgspico/mgs/: mgs_tools.cpp  mgs_tools.h
RasPiPico/rp2040/mgspico/oled/: FONT16X16.h  FONT16X32.h  FONT8X16MIN.h  SOUNDLOGO.h  oledssd1306.cpp  oledssd1306.h
RasPiPico/rp2040/mgspico/tgf/: CReadFileStream.h  CTgfPlayer.cpp  CTgfPlayer.h  tgf.h
RasPiPico/rp2040/mgspico/vgm/: CVgmPlayer.cpp  CVgmPlayer.h  vgm.h
RasPiPico/rp2040/mgspico_2/: CMakeLists.txt
RasPiPico/rp2040/mgspico_3/: CMakeLists.txt
RasPiPico/rp2040/mgspico_3rc/: CMakeLists.txt
RasPiPico/rp2040/playlib/: CMakeLists.txt  player.z80  playlib.cpp  playlib.h
docs/logo/: mgspico_logo.vsdx
